Fixes styling bug when entity counts get too long and run over other text.

--- a/data-glutton-ui/src/app/dashboard/dashboard.component.scss
+++ b/data-glutton-ui/src/app/dashboard/dashboard.component.scss
@@ -56,9 +56,9 @@
 }
 
 .dashboard-item-value {
-    max-width: calc(15% - 25px);
-    min-width: calc(15% - 25px);
-    width: calc(15% - 25px);
+    max-width: calc(15%);
+    min-width: calc(15%);
+    width: calc(15%);
 }
 
 .dashboard-list-fragment {
